--- a/orbit-report/src/app/app.component.html
+++ b/orbit-report/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
 <div class="search-form">
-    <input (keyup.enter)= "search(searchTerm.value)"/>
+    <input #searchTerm (keyup.enter)= "search(searchTerm.value)"/>
     <button (click)= "search(searchTerm.value)"> Search </button>
 </div>
+
