Assignment has been completed

--- a/orbit-report/src/app/orbit-list/orbit-list.component.html
+++ b/orbit-report/src/app/orbit-list/orbit-list.component.html
@@ -9,7 +9,7 @@
    </tr>
    <tr *ngFor = 'let item of satellites'> 
       <td>{{item.name}}</td>
-      <td [class.warning]="item.shouldShowWarning">{{item.type}}   
+      <td [class.warning]="item.shouldShowWarning()">{{item.type}}   
    </td>
       <td>{{item.operational}}</td>
       <td>{{item.orbitType}}</td>
